packages/next-swc/crates/core/tests/errors/react-server-components/server-graph/fake-client-entry/output.js
export default function() {
    return null;
}
// prettier-ignore
;
